--- a/scss/main.scss
+++ b/scss/main.scss
@@ -29,6 +29,7 @@
             justify-content: center;
             flex-direction: column;
             align-items: center;
+            transition: all ease .6s;
 
             &__box {
                 text-align: center;
@@ -48,7 +49,15 @@
                     border-radius: 8px;
                     font-size: 1rem;
                     width: 80%;
-                }
+                }                
+            }
+
+            &__paragraph {
+                font-family: sans-serif;
+                font-size: 0.8rem;
+                color: red;
+                margin-bottom: 10px;
+                transition: all ease .6s;
             }
 
             &__btn {
